--- a/package.json
+++ b/package.json
@@ -37,16 +37,18 @@
 		"lint:check": "turbo run lint:check",
 		"lint:fix": "turbo run lint:fix",
 		"lint:fix:eslint": "turbo run lint:fix:eslint",
+		"lint:fix:eslint:pre-commit": "turbo run lint:fix:eslint:pre-commit",
 		"lint:fix:trunk": "trunk check",
 		"quality:check": "turbo run quality:check",
 		"quality:fix": "turbo run quality:fix",
 		"quality:fix:unsafe": "turbo run quality:fix -- --unsafe",
 		"test:unit": "turbo run test:unit",
+		"test:unit:pre-commit": "turbo run test:unit:pre-commit",
 		"test:unit:features": "turbo run test:unit:features",
 		"test:e2e": "turbo run test:e2e",
 		"test:e2e:features": "turbo run test:e2e:features",
 		"git-hooks:install": "pre-commit install",
-		"pre-commit:run": "pre-commit install && pre-commit run --all-files",
+		"pre-commit:run": "pre-commit install && pre-commit run --all-files && python scripts/mark_precommit_run.py",
 		"pre-commit:update": "pre-commit-update"
 	},
 	"packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac",
