--- a/.trunk/configs/.yamllint.yaml
+++ b/.trunk/configs/.yamllint.yaml
@@ -1,5 +1,12 @@
+---
 extends: default
 rules:
+  line-length:
+    max: 100
+    level: warning
+  comments:
+    min-spaces-from-content: 1
+    require-starting-space: false
   quoted-strings:
     required: only-when-needed
     extra-allowed: ["{|}"]
