--- a/biome.jsonc
+++ b/biome.jsonc
@@ -21,16 +21,13 @@
 	"javascript": {
 		"formatter": {
 			"quoteStyle": "double"
-		},
-		"parser": {
-			"unsafeParameterDecoratorsEnabled": true
 		}
 	},
 	"assist": {
 		"enabled": true,
 		"actions": {
 			"source": {
-				"organizeImports": "on"
+				"organizeImports": "off"
 			}
 		}
 	}
