--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -15,20 +15,15 @@
 		"start:debug": "nest start --debug --watch",
 		"start:prod": "node dist/main",
 		"types:check": "tsc --noEmit",
-
 		"format:check": "biome format",
 		"format:fix": "biome format --write",
-
 		"lint:check:eslint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
 		"lint:check": "biome lint && pnpm lint:check:eslint",
-
 		"lint:fix:eslint": "eslint --fix \"{src,apps,libs,test}/**/*.ts\"",
 		"lint:fix:eslint:pre-commit": "pnpm lint:fix:eslint --quiet",
 		"lint:fix": "biome lint --write --unsafe && pnpm lint:fix:eslint",
-
 		"quality:check": "biome check && pnpm lint:check:eslint",
 		"quality:fix": "biome check --write --unsafe && pnpm lint:fix:eslint",
-
 		"test": "jest",
 		"test:watch": "jest --watch",
 		"test:cov": "jest --coverage",
@@ -51,6 +46,7 @@
 		"@nestjs/config": "4.0.2",
 		"@nestjs/core": "^11.0.1",
 		"@nestjs/platform-express": "^11.0.1",
+		"@nestjs/swagger": "11.2.0",
 		"@nestjs/typeorm": "11.0.0",
 		"@repo/features": "workspace:*",
 		"class-transformer": "0.5.1",
@@ -73,20 +69,19 @@
 		"@nestjs/cli": "^11.0.0",
 		"@nestjs/schematics": "^11.0.0",
 		"@nestjs/testing": "^11.0.1",
+		"@repo/data": "workspace:*",
 		"@suites/di.nestjs": "3.0.1",
 		"@suites/doubles.jest": "3.0.1",
 		"@suites/unit": "3.0.1",
 		"@swc/cli": "^0.6.0",
 		"@swc/core": "^1.10.7",
 		"@types/express": "^5.0.0",
-		"@types/jest": "^29.5.14",
 		"@types/node": "^22.10.7",
 		"@types/supertest": "^6.0.2",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-prettier": "^5.2.2",
 		"globals": "^16.0.0",
-		"jest": "^29.7.0",
 		"source-map-support": "^0.5.21",
 		"supertest": "^7.0.0",
 		"ts-jest": "^29.2.5",
@@ -97,13 +92,19 @@
 		"typescript-eslint": "^8.20.0"
 	},
 	"jest": {
-		"moduleFileExtensions": ["js", "json", "ts"],
+		"moduleFileExtensions": [
+			"js",
+			"json",
+			"ts"
+		],
 		"rootDir": "src",
 		"testRegex": ".*\\.spec\\.ts$",
 		"transform": {
 			"^.+\\.(t|j)s$": "ts-jest"
 		},
-		"collectCoverageFrom": ["**/*.(t|j)s"],
+		"collectCoverageFrom": [
+			"**/*.(t|j)s"
+		],
 		"coverageDirectory": "../coverage",
 		"testEnvironment": "node"
 	}
