--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
 		"@biomejs/biome": "2.1.2",
 		"@primitivestack/core": "0.0.16",
 		"@tiagojacinto/eslint-config": "0.5.21",
+		"@tiagojacinto/jest-config": "0.0.1",
 		"@tiagojacinto/prettier-config": "0.1.1",
 		"@tiagojacinto/typescript-config": "0.1.1",
 		"@trunkio/launcher": "1.3.4",
+		"@types/jest": "^29.5.14",
 		"@types/node": "^22.16.4",
 		"dprint": "0.50.1",
 		"eslint": "^9.31.0",
 		"eslint-config-biome": "1.9.4",
 		"is-ci": "^4.1.0",
+		"jest": "^29.7.0",
 		"jest-cucumber": "^4.5.0",
 		"rimraf": "^6.0.1",
 		"ts-node": "^10.9.2",
