chore: disable trunk actions

--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -36,8 +36,8 @@ lint:
     - yamllint@1.37.1
 
 actions:
-  enabled:
-    - trunk-announce
-    - trunk-check-pre-push
-    - trunk-fmt-pre-commit
-    - trunk-upgrade-available
+# enabled:
+#   - trunk-announce
+#   - trunk-check-pre-push
+#   - trunk-fmt-pre-commit
+#   - trunk-upgrade-available
