chore(backend): change MikroORM config file path

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -33,8 +33,8 @@
 		"test:unit:features": "jest --config ./test/jest.unit.features.config.ts",
 		"test:e2e": "jest --config ./test/jest.e2e.config.ts",
 		"test:e2e:features": "jest --config ./test/jest.e2e.features.config.ts",
-		"db:mikro-orm:migration:initial": "mikro-orm migration:create --initial --config=src/shared/database/mikroorm/mikro-orm.config.ts",
-		"db:mikro-orm:migration:up": "pnpm mikro-orm migration:up --config=src/shared/database/mikroorm/mikro-orm.config.ts",
+		"db:mikro-orm:migration:initial": "mikro-orm migration:create --initial --config=src/shared/database/mikroorm/config.ts",
+		"db:mikro-orm:migration:up": "pnpm mikro-orm migration:up --config=src/shared/database/mikroorm/config.ts",
 		"db:migration:create": "typeorm migration:create ./src/shared/database/migrations/migration",
 		"db:migration:generate": "typeorm migration:generate ./src/shared/database/migrations/migration"
 	},
