--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,5 @@ requires-python = ">=3.13"
 dependencies = [
     "pre-commit>=4.2.0",
     "pre-commit-update>=0.8.0",
+    "schemathesis>=4.0.25",
 ]
