--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,11 +1,18 @@
 {
-	// "extends": "@repo/typescript-config/react-library.json",
+	"extends": "@tiagojacinto/typescript-config/react-library.json",
 	"compilerOptions": {
 		"baseUrl": ".",
 		"paths": {
-			"@repo/ui/*": ["./src/*"]
+			"@repo/ui/*": [
+				"./src/*"
+			]
 		}
 	},
-	"include": ["."],
-	"exclude": ["node_modules", "dist"]
+	"include": [
+		"."
+	],
+	"exclude": [
+		"node_modules",
+		"dist"
+	]
 }
