--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,6 +6,7 @@
 		"lint": "eslint . --max-warnings 0"
 	},
 	"dependencies": {
+		"@radix-ui/react-label": "2.1.7",
 		"@radix-ui/react-slot": "^1.1.2",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -13,6 +14,8 @@
 		"next-themes": "^0.4.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-hook-form": "7.61.1",
+		"sonner": "2.0.6",
 		"tailwind-merge": "^3.0.1",
 		"tw-animate-css": "^1.2.4",
 		"zod": "^3.24.2"
