--- a/package.json
+++ b/package.json
@@ -1,36 +1,15 @@
 {
 	"name": "ratings-v2",
 	"private": true,
-	"dependencies": {
-		"zod": "4.0.5"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "2.1.2",
-		"@primitivestack/core": "0.0.16",
-		"@tiagojacinto/eslint-config": "0.5.21",
-		"@tiagojacinto/jest-config": "0.0.1",
-		"@tiagojacinto/prettier-config": "0.1.1",
-		"@tiagojacinto/typescript-config": "0.1.1",
-		"@trunkio/launcher": "1.3.4",
-		"@types/jest": "^29.5.14",
-		"@types/node": "^22.16.4",
-		"dprint": "0.50.1",
-		"eslint": "^9.31.0",
-		"eslint-config-biome": "1.9.4",
-		"is-ci": "^4.1.0",
-		"jest": "^29.7.0",
-		"jest-cucumber": "^4.5.0",
-		"rimraf": "^6.0.1",
-		"ts-node": "^10.9.2",
-		"tsx": "4.20.3",
-		"turbo": "^2.5.5",
-		"type-fest": "4.41.0",
-		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.35.1"
-	},
 	"scripts": {
+		"generate:openapi-spec": "turbo run generate:openapi-spec",
+		"generate:openapi-spec:watch": "turbo watch generate:openapi-spec",
+		"generate:api-sdk": "turbo run generate:api-sdk",
+		"generate:api-sdk:dev": "turbo run generate:api-sdk:dev",
 		"build": "turbo run build",
-		"dev": "turbo run dev",
+		"build:watch": "turbo watch build",
+		"start:dev": "turbo run start:dev",
+		"start:dev:watch": "turbo watch start:dev",
 		"trunk": "trunk",
 		"types:check": "turbo run types:check",
 		"format:check": "turbo run format:check",
@@ -53,6 +32,52 @@
 		"git-hooks:install": "pre-commit install",
 		"pre-commit:run": "pre-commit install && pre-commit run --all-files && python scripts/mark_precommit_run.py",
 		"pre-commit:update": "pre-commit-update"
+	},
+	"dependencies": {
+		"deepmerge": "4.3.1",
+		"lodash": "4.17.21",
+		"ramda": "0.31.3",
+		"zod": "4.0.14"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.1.2",
+		"@kubb/cli": "3.16.1",
+		"@kubb/core": "3.16.0",
+		"@kubb/plugin-client": "3.16.1",
+		"@kubb/plugin-oas": "3.16.1",
+		"@kubb/plugin-ts": "3.16.1",
+		"@kubb/plugin-zod": "3.16.1",
+		"@kubb/react": "3.16.1",
+		"@primitivestack/core": "0.0.16",
+		"@tiagojacinto/eslint-config": "0.5.22",
+		"@tiagojacinto/jest-config": "0.0.1",
+		"@tiagojacinto/prettier-config": "0.1.1",
+		"@tiagojacinto/typescript-config": "0.1.3",
+		"@total-typescript/ts-reset": "0.6.1",
+		"@trunkio/launcher": "1.3.4",
+		"@types/jest": "^29.5.14",
+		"@types/lodash": "4.17.20",
+		"@types/node": "^22.16.4",
+		"@types/ramda": "0.31.0",
+		"@types/supertest": "^6.0.3",
+		"concurrently": "9.2.0",
+		"cross-env": "10.0.0",
+		"dotenv-cli": "10.0.0",
+		"dprint": "0.50.1",
+		"eslint": "^9.31.0",
+		"eslint-config-biome": "1.9.4",
+		"is-ci": "^4.1.0",
+		"jest": "^29.7.0",
+		"jest-cucumber": "^4.5.0",
+		"rimraf": "^6.0.1",
+		"supertest": "^7.1.4",
+		"ts-jest": "29.4.0",
+		"ts-node": "10.9.2",
+		"tsx": "4.20.3",
+		"turbo": "^2.5.5",
+		"type-fest": "4.41.0",
+		"typescript": "^5.8.3",
+		"typescript-eslint": "^8.38.0"
 	},
 	"packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac",
 	"engines": {
