--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,16 +3,17 @@ packages:
   - packages/*
 
 onlyBuiltDependencies:
-  - '@nestjs/core'
-  - '@scarf/scarf'
-  - '@suites/di.nestjs'
-  - '@suites/doubles.jest'
-  - '@swc/core'
-  - '@tailwindcss/oxide'
+  - "@nestjs/core"
+  - "@scarf/scarf"
+  - "@swc/core"
+  - "@tailwindcss/oxide"
   - core-js-pure
   - dprint
+  - es5-ext
   - esbuild
+  - msw
   - nx
+  - puppeteer
   - sharp
   - sqlite3
   - unrs-resolver
