--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -36,60 +36,56 @@
 		"db:mikro-orm:migration:initial": "mikro-orm migration:create --initial --config=src/shared/database/mikroorm/config.ts",
 		"db:mikro-orm:migration:up": "pnpm mikro-orm migration:up --config=src/shared/database/mikroorm/config.ts",
 		"db:migration:create": "typeorm migration:create ./src/shared/database/migrations/migration",
-		"db:migration:generate": "typeorm migration:generate ./src/shared/database/migrations/migration"
+		"db:migration:generate": "typeorm migration:generate ./src/shared/database/migrations/migration",
+		"generate:api-sdk": "kubb generate",
+		"generate:api-sdk:dev": "kubb generate --watch"
 	},
 	"dependencies": {
 		"@mikro-orm/core": "6.4.16",
 		"@mikro-orm/nestjs": "6.1.1",
 		"@mikro-orm/postgresql": "6.4.16",
-		"@nestjs/common": "^11.0.1",
+		"@nestjs/common": "11.1.5",
 		"@nestjs/config": "4.0.2",
-		"@nestjs/core": "^11.0.1",
-		"@nestjs/platform-express": "^11.0.1",
-		"@nestjs/swagger": "11.2.0",
+		"@nestjs/core": "11.1.5",
+		"@nestjs/platform-express": "11.1.5",
 		"@nestjs/typeorm": "11.0.0",
-		"@repo/features": "workspace:*",
 		"class-transformer": "0.5.1",
 		"class-validator": "0.14.2",
-		"dotenv": "17.2.0",
+		"dotenv": "17.2.1",
 		"envalid": "8.1.0",
-		"joi": "17.13.3",
-		"mysql2": "3.14.2",
+		"express-openapi-validator": "5.5.8",
 		"pg": "8.16.3",
-		"reflect-metadata": "^0.2.2",
-		"rxjs": "^7.8.1",
+		"reflect-metadata": "0.2.2",
+		"rxjs": "7.8.2",
 		"typeorm": "0.3.25"
 	},
 	"devDependencies": {
-		"@eslint/eslintrc": "^3.2.0",
-		"@eslint/js": "^9.18.0",
+		"@eslint/eslintrc": "^3.3.1",
+		"@eslint/js": "^9.32.0",
 		"@mikro-orm/cli": "6.4.16",
 		"@mikro-orm/migrations": "6.4.16",
 		"@mikro-orm/reflection": "6.4.16",
-		"@nestjs/cli": "^11.0.0",
-		"@nestjs/schematics": "^11.0.0",
-		"@nestjs/testing": "^11.0.1",
-		"@repo/data": "workspace:*",
+		"@nestjs/cli": "^11.0.10",
+		"@nestjs/schematics": "^11.0.7",
+		"@nestjs/testing": "^11.1.5",
+		"@repo/features": "workspace:*",
+		"@repo/contract": "workspace:*",
+		"@suites/unit": "3.0.1",
 		"@suites/di.nestjs": "3.0.1",
 		"@suites/doubles.jest": "3.0.1",
-		"@suites/unit": "3.0.1",
 		"@swc/cli": "^0.6.0",
-		"@swc/core": "^1.10.7",
-		"@types/express": "^5.0.0",
-		"@types/node": "^22.10.7",
-		"@types/supertest": "^6.0.2",
-		"eslint": "^9.18.0",
-		"eslint-config-prettier": "^10.0.1",
-		"eslint-plugin-prettier": "^5.2.2",
-		"globals": "^16.0.0",
+		"@swc/core": "^1.13.3",
+		"@types/express": "^5.0.3",
+		"@types/node": "^22.17.0",
+		"eslint": "^9.32.0",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-plugin-prettier": "^5.5.3",
+		"globals": "^16.3.0",
 		"source-map-support": "^0.5.21",
-		"supertest": "^7.0.0",
-		"ts-jest": "^29.2.5",
+		"ts-jest": "^29.4.1",
 		"ts-loader": "^9.5.2",
-		"ts-node": "^10.9.2",
 		"tsconfig-paths": "^4.2.0",
-		"typescript": "^5.7.3",
-		"typescript-eslint": "^8.20.0"
+		"typescript": "^5.9.2"
 	},
 	"jest": {
 		"moduleFileExtensions": [
