--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,28 +1,75 @@
 {
-	"name": "web",
-	"version": "0.0.1",
-	"type": "module",
-	"private": true,
-	"scripts": {
-		"dev": "next dev --turbopack",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint",
-		"lint:fix": "next lint --fix",
-		"typecheck": "tsc --noEmit"
-	},
-	"dependencies": {
-		"@repo/ui": "workspace:*",
-		"lucide-react": "^0.475.0",
-		"next": "^15.2.3",
-		"next-themes": "^0.4.4",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
-	},
-	"devDependencies": {
-		"@types/node": "^20",
-		"@types/react": "^19",
-		"@types/react-dom": "^19",
-		"typescript": "^5.7.3"
-	}
+  "name": "web",
+  "version": "0.0.1",
+  "type": "module",
+  "private": true,
+  "scripts": {
+    "start:dev": "next dev --turbo",
+    "start:test": "dotenv -e .env.test -- next dev --turbo",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "types:check": "tsc --noEmit",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:cov": "vitest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:unit": "vitest --config ./test/vitest/vitest.unit.config.ts",
+    "test:unit:pre-commit": "pnpm test:unit --testTimeout 3000",
+    "test:unit:features": "vitest --config ./test/vitest/vitest.unit.features.config.ts",
+    "test:e2e": "vitest --config ./test/vitest/vitest.e2e.features.config.ts",
+    "test:e2e:features": "vitest --config ./test/vitest/vitest.e2e.features.config.ts",
+    "generate:api-sdk": "kubb generate",
+    "generate:api-sdk:dev": "kubb generate --watch"
+  },
+  "dependencies": {
+    "@hookform/resolvers": "5.2.1",
+    "@radix-ui/react-label": "2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@repo/ui": "workspace:*",
+    "headers-polyfill": "4.0.3",
+    "lucide-react": "^0.475.0",
+    "next": "^15.4.5",
+    "next-themes": "^0.4.6",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "7.61.1",
+    "reflect-metadata": "0.2.2",
+    "sonner": "2.0.6",
+    "zod": "4.0.14"
+  },
+  "devDependencies": {
+    "@elysiajs/node": "1.3.0",
+    "@faker-js/faker": "9.9.0",
+    "@kubb/plugin-faker": "3.16.2",
+    "@kubb/plugin-msw": "3.16.1",
+    "@primitivestack/frontend-testing-core": "0.0.11",
+    "@primitivestack/frontend-testing-library-dom": "0.0.28",
+    "@primitivestack/frontend-testing-puppeteer": "0.0.12",
+    "@repo/contract": "workspace:*",
+    "@repo/features": "workspace:*",
+    "@testing-library/dom": "10.4.1",
+    "@testing-library/react": "16.3.0",
+    "@types/cors": "2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@vitejs/plugin-react": "5.0.0",
+    "@vitejs/plugin-react-swc": "4.0.0",
+    "@vitest/browser": "3.2.4",
+    "axios": "1.11.0",
+    "cors": "2.8.5",
+    "elysia": "1.3.5",
+    "express": "5.1.0",
+    "jsdom": "26.1.0",
+    "msw": "2.10.4",
+    "playwright": "1.54.2",
+    "puppeteer": "24.16.2",
+    "typescript": "^5.7.3",
+    "vite-tsconfig-paths": "5.1.4",
+    "vitest": "3.2.4",
+    "vitest-browser-react": "1.0.1"
+  }
 }
