--- a/packages/features/package.json
+++ b/packages/features/package.json
@@ -1,9 +1,10 @@
 {
 	"name": "@repo/features",
 	"private": true,
-	"type": "module",
-	"main": "./src/index.ts",
+	"main": "./dist/index.js",
+	"types": "./dist/index.d.ts",
 	"scripts": {
+		"start:dev": "tsc --watch",
 		"symlink-features": "tsx ./scripts/symlink-features.ts",
 		"snippets": "tsx ./scripts/snippets.ts",
 		"steps": "tsx ./scripts/steps.ts"
