--- a/packages/features/tsconfig.json
+++ b/packages/features/tsconfig.json
@@ -1,3 +1,13 @@
 {
-  "extends": "@tiagojacinto/typescript-config/base.json"
+  "extends": "@tiagojacinto/typescript-config/base.json",
+  "compilerOptions": {
+    "module": "node16",
+    "moduleResolution": "node16",
+    "target": "es2022",
+    "declaration": true,
+    "outDir": "dist",
+  },
+  "include": [
+    "src"
+  ]
 }
